--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,6 @@ services:
     container_name: lms-backend
     restart: always
     env_file:
-      - .env
+      - /opt/lms/.env
     ports:
       - "8082:8080"
