--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     image: lms-backend:latest
     container_name: lms-backend
     env_file:
+      - APP_KEY=$zE!82dBpw1yv!3SwTpFK6latI6cAPrM
       - /opt/lms/.env  # Untuk docker compose environment variables
     ports:
       - "8082:8080"
